--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,8 @@ pkg_search_module(JPEG REQUIRED libjpeg)
 
 if (BUILD_SHARED_LIB)
     message(STATUS "PoissonRecon: Building shared library")
+    # file(GLOB_RECURSE SRCS_POISSONRECON "Src/*.cpp")
+    # add_library(PoissonRecon SHARED ${SRCS_POISSONRECON})
     add_library(PoissonRecon SHARED Src/PoissonRecon.cpp)
 #    target_link_libraries(PoissonRecon PRIVATE PNG ZLIB JPEG Threads::Threads)
 #    target_compile_definitions(PoissonRecon PRIVATE -Dmain=PoissonRecon)
@@ -72,10 +74,12 @@ if (BUILD_SHARED_LIB)
     )
 endif()
 
+set(CMAKE_FIND_LIBRARY_SUFFIXES ".so")
+
 if (BUILD_EXECUTABLE)
     message(STATUS "PoissonRecon: Building executable")
     add_executable(PoissonReconApp Src/PoissonRecon.cpp)
 #    target_link_libraries(PoissonReconApp PRIVATE PNG ZLIB JPEG Threads::Threads)
-    target_link_libraries(PoissonReconApp PUBLIC zlib libpng libjpeg)
+    target_link_libraries(PoissonReconApp optimized -lPoissonRecon -lz -lpng -ljpeg)
     install(TARGETS PoissonReconApp)
 endif()
